--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.2",
-    "react-icons": "^4.9.0"
+    "react-icons": "^4.9.0",
+    "react-infinite-scroll-component": "^6.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
