--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^10.12.16",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
+    "ms": "^2.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.2",
@@ -26,6 +27,7 @@
     "react-infinite-scroll-component": "^6.1.0"
   },
   "devDependencies": {
+    "@types/ms": "^0.7.31",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
