--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.2",
     "react-icons": "^4.9.0",
-    "react-infinite-scroll-component": "^6.1.0"
+    "react-infinite-scroll-component": "^6.1.0",
+    "simple-zustand-devtools": "^1.1.0",
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
     "@types/ms": "^0.7.31",
