--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-hook-form": "^7.44.2",
     "react-icons": "^4.9.0",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-router-dom": "^6.13.0",
     "simple-zustand-devtools": "^1.1.0",
     "zustand": "^4.3.8"
   },
